@@ -4,7 +4,7 @@ Authors@R: c(person(c("Steven", "E."), "Pav",
     role=c("aut","cre"),
     email="shabbychef@gmail.com",
     comment = c(ORCID = "0000-0002-4197-6195")))
-Version: 0.2.4
+Version: 0.2.5
 Date: 2018-08-27
 License: LGPL-3
 Title: Automatic Differentiation of Multivariate Operations
