@@ -90,12 +90,18 @@ NULL
 #' \newcommand{\CRANpkg}{\href{https://cran.r-project.org/package=#1}{\pkg{#1}}}
 #' \newcommand{\madness}{\CRANpkg{madness}}
 #'
-#' @section \madness{} Version 0.2.4 (2018-08-27) :
+#' @section \madness{} Version 0.2.5 (2018-08-27) :
+#' \itemize{
+#' \item emergency CRAN release to deal with failing vignette on alternative
+#' BLAS.
+#' }
+#'
+#' @section \madness{} Version 0.2.4 (2018-08-26) :
 #' \itemize{
 #' \item adding to unit tests.
 #' \item fix scalar to array promotion.
 #' \item fix broken vtag in aperm.
-#' \item add vignette source and data for same.
+#' \item add FF3 and stock returns data to build vignette.
 #' }
 #'
 #' @section \madness{} Version 0.2.3 (2018-02-14) :
