@@ -1,5 +1,9 @@
 
 2018-08-27 Steven E. Pav <shabbychef@gmail.com>
+* CRAN emergency release, version 0.2.5
+* dumb down vignette for alternative BLAS/LAPACK libraries.
+
+2018-08-26 Steven E. Pav <shabbychef@gmail.com>
 * CRAN release, version 0.2.4
 * adding to tests.
 * fix scalar to array promotion.
